Backport do-div-cast.patch from 364 to fix modeset kernel module build failure on 4.6
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/361@6523 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -6,3 +6,4 @@ nvidia-modeset-use-ARCH.o_binary.patch
 include-swiotlb-header-on-arm.patch
 ignore_xen_on_arm.patch
 arm-outer-sync.patch
+do-div-cast.patch
