--- a/debian/control
+++ b/debian/control
@@ -98,11 +98,25 @@ Depends:
  libgl1-${nvidia}-glx (= ${binary:Version}),
  ${misc:Depends}
 Recommends:
- libgl1-${nvidia}-glx-i386 [amd64],
+ ${nvidia}-driver-libs-i386 [amd64],
 Description: NVIDIA metapackage (GL/GLX libraries)${nvidia:LegacyDesc}
  This metapackage depends on the NVIDIA binary libraries
  that provide optimized hardware acceleration of
  OpenGL applications via a direct-rendering X Server.
+
+#Package: ${nvidia}-driver-libs-i386
+Package: nvidia-driver-libs-i386
+Architecture: i386
+Multi-Arch: foreign
+Depends:
+ ${nvidia}-driver-libs,
+ ${misc:Depends}
+Conflicts:
+ libgl1-${nvidia}-glx-i386,
+Description: NVIDIA metapackage (GL/GLX 32-bit libraries)${nvidia:LegacyDesc}
+ This metapackage helps the automatic installation of the 32-bit NVIDIA
+ OpenGL/GLX libraries when installing ${nvidia}-driver-libs
+ on amd64 with foreign architecture i386 enabled.
 
 #Package: xserver-xorg-video-${nvidia}
 Package: xserver-xorg-video-nvidia
@@ -176,18 +190,6 @@ Description: NVIDIA binary OpenGL libraries${nvidia:LegacyDesc}
  See the description of the ${nvidia}-driver package
  or /usr/share/doc/libgl1-${nvidia}-glx/README.txt.gz
  for a complete list of supported GPUs and PCI IDs.
-
-#Package: libgl1-${nvidia}-glx-i386
-Package: libgl1-nvidia-glx-i386
-Architecture: i386
-Multi-Arch: foreign
-Depends:
- libgl1-${nvidia}-glx,
- ${misc:Depends}
-Description: NVIDIA binary OpenGL 32-bit libraries${nvidia:LegacyDesc}
- This metapackage helps the automatic installation of the 32-bit NVIDIA
- OpenGL libraries when installing libgl1-${nvidia}-glx
- on amd64 with foreign architecture i386 enabled.
 
 #Package: ${nvidia}-alternative
 Package: nvidia-alternative
