--- a/debian/control
+++ b/debian/control
@@ -395,6 +395,7 @@ Depends:
  ${nvidia-alternative} (= ${binary:Version}),
  libgl1-${nvidia}-glx (= ${binary:Version}),
  libglx0-${nvidia} (= ${binary:Version}),
+ nvidia-vulkan-common,
  ${shlibs:Depends}, ${misc:Depends}
 Description: NVIDIA binary GLX libraries${nvidia:LegacyDesc}
  GLX ("OpenGL Extension to the X Window System") provides an interface between
@@ -849,6 +850,20 @@ Description: NVIDIA Management Library (NVML) runtime library
  It provides a direct access to the queries and commands exposed via nvidia-smi.
  .
  This package contains the nvidia-ml runtime library.
+
+Package: nvidia-vulkan-common
+Architecture: i386 amd64
+Multi-Arch: foreign
+Depends:
+ libvulkan1,
+ ${misc:Depends}
+Suggests:
+ vulkan-utils
+Description: NVIDIA Vulkan driver
+ Vulkan is a multivendor open standard by the Khronos Group for 3D graphics.
+ .
+ This package provides the common files for the NVIDIA installable client
+ driver (ICD) for Vulkan.
 
 Package: nvidia-opencl-common
 Architecture: i386 amd64 ppc64el
