Rename nvidia-vulkan-common to nvidia-vulkan-icd, and make it depend on libglx-nvidia0 and not the other way around
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/364@6562 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -395,7 +395,6 @@ Depends:
  ${nvidia-alternative} (= ${binary:Version}),
  libgl1-${nvidia}-glx (= ${binary:Version}),
  libglx0-${nvidia} (= ${binary:Version}),
- nvidia-vulkan-common,
  ${shlibs:Depends}, ${misc:Depends}
 Description: NVIDIA binary GLX libraries${nvidia:LegacyDesc}
  GLX ("OpenGL Extension to the X Window System") provides an interface between
@@ -851,10 +850,11 @@ Description: NVIDIA Management Library (NVML) runtime library
  .
  This package contains the nvidia-ml runtime library.
 
-Package: nvidia-vulkan-common
+Package: nvidia-vulkan-icd
 Architecture: i386 amd64
 Multi-Arch: foreign
 Depends:
+ libglx-${nvidia}0 (= ${binary:Version}),
  libvulkan1,
  ${misc:Depends}
 Suggests:
