Make nvidia-driver depend on nvidia-vulkan-icd
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/364@6563 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -39,6 +39,7 @@ Depends:
  ${nvidia-alternative} (= ${binary:Version}),
  ${nvidia:kmod:binary},
  nvidia-support,
+ nvidia-vulkan-icd [amd64 i386],
  ${misc:Depends}
 Recommends:
  ${nvidia-settings},
