--- a/debian/libgl1-nvidia-glx.links.in
+++ b/debian/libgl1-nvidia-glx.links.in
@@ -1,2 +1,1 @@
-#!armhf##LIBDIR#/#PRIVATE#/libGL.so.1.0.0                 #LIBDIR#/#PRIVATE#/libGL.so.1
-#armhf##LIBDIR#/#PRIVATE#/libGL.so.#VERSION#                 #LIBDIR#/#PRIVATE#/libGL.so.1
+#LIBDIR#/#PRIVATE#/libGL.so.#VERSION#			#LIBDIR#/#PRIVATE#/libGL.so.1
