--- a/debian/libgles-nvidia1.lintian-overrides.in
+++ b/debian/libgles-nvidia1.lintian-overrides.in
@@ -5,5 +5,5 @@ hardening-no-fortify-functions
 hardening-no-relro
 hardening-no-stackprotector
 
-# Lintian and debhelper disagree w.r.t a library in a private directory.
-postinst-has-useless-call-to-ldconfig
+# Lintian and debhelper disagree w.r.t. a library in a private directory.
+package-has-unnecessary-activation-of-ldconfig-trigger
