--- a/debian/libgles1-glvnd-nvidia.lintian-overrides.in
+++ b/debian/libgles1-glvnd-nvidia.lintian-overrides.in
@@ -10,5 +10,5 @@ hardening-no-stackprotector
 # the free version for Debian's purposes.
 symbols-declares-dependency-on-other-package libgles1-mesa
 
-# Lintian and debhelper disagree w.r.t a library in a private directory.
-postinst-has-useless-call-to-ldconfig
+# Lintian and debhelper disagree w.r.t. a library in a private directory.
+package-has-unnecessary-activation-of-ldconfig-trigger
