--- a/debian/control
+++ b/debian/control
@@ -95,13 +95,14 @@ Package: nvidia-driver-libs
 Architecture: i386 amd64 armhf
 Multi-Arch: same
 Depends:
- libgl1-${nvidia}-glx (= ${binary:Version}),
- libglx-${nvidia}0 (= ${binary:Version}),
+ lib${nvidia}-glcore (= ${binary:Version}),
+ libgl1-${nvidia}-glx (= ${binary:Version}) | libgl1-glvnd-${nvidia}-glx (= ${binary:Version}),
  libegl-${nvidia}0 (= ${binary:Version}),
  ${misc:Depends}
 Recommends:
  ${nvidia}-driver-libs-i386 [amd64],
  libopengl0-nvidia (= ${binary:Version}),
+ libglx-${nvidia}0 (= ${binary:Version}),
  libgles-${nvidia}1 (= ${binary:Version}),
  libgles-${nvidia}2 (= ${binary:Version}),
  lib${nvidia}-cfg1 (= ${binary:Version}),
@@ -132,7 +133,7 @@ Pre-Depends:
  nvidia-installer-cleanup,
  ${nvidia:legacy-check},
 Depends:
- libgl1-${nvidia}-glx (= ${binary:Version}),
+ lib${nvidia}-glcore (= ${binary:Version}),
  ${nvidia}-alternative (= ${binary:Version}),
  nvidia-support (>= 20120630),
  ${nvidia:xorgDepends},
@@ -243,7 +244,7 @@ Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
  ${nvidia}-alternative (= ${binary:Version}),
- liblibglx0 | libglx0-nvidia,
+ libglx0 | libglx0-nvidia,
  lib${nvidia}-glcore (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Description: NVIDIA binary GLX libraries${nvidia:LegacyDesc}
@@ -391,8 +392,10 @@ Description: NVIDIA binary EGL libraries${nvidia:LegacyDesc}
 Package: libgles1-glvnd-nvidia
 Architecture: i386 amd64 armhf
 Multi-Arch: same
-Conflicts: libgles1-nvidia
-Replaces: libgles1-nvidia
+Breaks:
+ libgles1-nvidia (<< 361),
+Replaces:
+ libgles1-nvidia (<< 361),
 Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
@@ -443,8 +446,8 @@ Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
  ${nvidia}-alternative (= ${binary:Version}),
+ libgles1-glvnd | libgles1-glvnd-nvidia,
  lib${nvidia}-eglcore (= ${binary:Version}),
- libgles1-glvnd-${nvidia} (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Description: NVIDIA binary OpenGL|ES 1.x libraries${nvidia:LegacyDesc}
  OpenGL|ES is a cross-platform API for full-function 2D and 3D graphics on
@@ -464,8 +467,10 @@ Description: NVIDIA binary OpenGL|ES 1.x libraries${nvidia:LegacyDesc}
 Package: libgles2-glvnd-nvidia
 Architecture: i386 amd64 armhf
 Multi-Arch: same
-Conflicts: libgles2-nvidia
-Replaces: libgles2-nvidia
+Breaks:
+ libgles2-nvidia (<< 361),
+Replaces:
+ libgles2-nvidia (<< 361),
 Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
@@ -518,8 +523,8 @@ Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
  ${nvidia}-alternative (= ${binary:Version}),
+ libgles2-glvnd | libgles2-glvnd-nvidia,
  lib${nvidia}-eglcore (= ${binary:Version}),
- libgles2-glvnd-${nvidia} (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Description: NVIDIA binary OpenGL|ES 2.x libraries${nvidia:LegacyDesc}
  OpenGL|ES is a cross-platform API for full-function 2D and 3D graphics on
@@ -868,7 +873,7 @@ Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
- ${shlibs:Depends}, ${misc:Depends},
+ ${shlibs:Depends}, ${misc:Depends}
 Description: NVIDIA FAT binary loader
  The Compute Unified Device Architecture (CUDA) enables NVIDIA
  graphics processing units (GPUs) to be used for massively parallel
@@ -883,8 +888,8 @@ Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
- ${shlibs:Depends}, ${misc:Depends},
- lib${nvidia}-fatbinaryloader (= ${binary:Version})
+ lib${nvidia}-fatbinaryloader (= ${binary:Version}),
+ ${shlibs:Depends}, ${misc:Depends}
 Description: NVIDIA PTX JIT Compiler
  The Compute Unified Device Architecture (CUDA) enables NVIDIA
  graphics processing units (GPUs) to be used for massively parallel
