some additional abi tracking for glvnd
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/361@6579 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -193,6 +193,8 @@ Conflicts:
 Replaces:
  libglvnd-nvidia,
  libgldispatch0,
+Provides:
+ libglvnd-abi-${nvidia:Version},
 Description: Vendor neutral GL dispatch library -- libGLdispatch
  This is an implementation of the vendor-neutral dispatch layer for
  arbitrating OpenGL API calls between multiple vendors on a per-screen basis.
