--- a/debian/control
+++ b/debian/control
@@ -191,6 +191,8 @@ Conflicts:
 Replaces:
  libglvnd-nvidia,
  libgldispatch0,
+Provides:
+ libglvnd-abi-355,
 Description: Vendor neutral GL dispatch library -- libGLdispatch
  This is an implementation of the vendor-neutral dispatch layer for
  arbitrating OpenGL API calls between multiple vendors on a per-screen basis.
