Fix kernel module patch series, wrong UVM macro was used for radix-tree-empty.patch
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/361@6585 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -9,4 +9,4 @@ include-swiotlb-header-on-arm.patch
 ignore_xen_on_arm.patch
 arm-outer-sync.patch
 do-div-cast.patch
-#UVM#radix-tree-empty.patch
+#HAS_UVM#radix-tree-empty.patch
