--- a/debian/control
+++ b/debian/control
@@ -167,6 +167,7 @@ Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
  ${nvidia}-alternative (= ${binary:Version}),
+ lib${nvidia}-glcore (= ${binary:Version}),
  nvidia-installer-cleanup (>= 20130816) [i386],
  nvidia-support,
  ${shlibs:Depends}, ${misc:Depends}
@@ -176,9 +177,6 @@ Suggests:
  ${nvidia:kmod:source},
 Provides:
  libgl1-nvidia-glx-any,
- libgl1-nvidia-glx-${nvidia:Version},
-Conflicts:
- libgl1-nvidia-glx-${nvidia:Version},
 Breaks:
  libxvmcnvidia1 (<< 305),
 Replaces:
@@ -190,6 +188,30 @@ Description: NVIDIA binary OpenGL libraries${nvidia:LegacyDesc}
  See the description of the ${nvidia}-driver package
  or /usr/share/doc/libgl1-${nvidia}-glx/README.txt.gz
  for a complete list of supported GPUs and PCI IDs.
+
+#Package: lib${nvidia}-glcore
+Package: libnvidia-glcore
+Architecture: i386 amd64 armhf
+Multi-Arch: same
+Pre-Depends:
+ ${misc:Pre-Depends}
+Depends:
+ ${shlibs:Depends}, ${misc:Depends}
+Provides:
+ libnvidia-glcore-${nvidia:Version},
+Conflicts:
+ libnvidia-glcore-${nvidia:Version},
+ libgl1-nvidia-glx-${nvidia:Version},
+Breaks:
+ libgl1-${nvidia}-glx (<= 304.131-1),
+Replaces:
+ libgl1-${nvidia}-glx (<= 304.131-1),
+Description: NVIDIA binary OpenGL core libraries${nvidia:LegacyDesc}
+ These binary libraries provide optimized hardware acceleration of
+ OpenGL applications via a direct-rendering X Server.
+ .
+ This package contains the private core libraries used by the NVIDIA
+ implementation of OpenGL and GLX.
 
 #Package: ${nvidia}-alternative
 Package: nvidia-alternative
