split libnvidia-cfg1 from libgl1-nvidia-glx
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304-stretch@6597 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -99,6 +99,7 @@ Depends:
  ${misc:Depends}
 Recommends:
  ${nvidia}-driver-libs-i386 [amd64],
+ lib${nvidia}-cfg1 (= ${binary:Version}),
 Description: NVIDIA metapackage (GL/GLX libraries)${nvidia:LegacyDesc}
  This metapackage depends on the NVIDIA binary libraries
  that provide optimized hardware acceleration of
@@ -212,6 +213,27 @@ Description: NVIDIA binary OpenGL core libraries${nvidia:LegacyDesc}
  .
  This package contains the private core libraries used by the NVIDIA
  implementation of OpenGL and GLX.
+
+#Package: lib${nvidia}-cfg1
+Package: libnvidia-cfg1
+Architecture: i386 amd64 armhf
+Multi-Arch: same
+Pre-Depends:
+ ${misc:Pre-Depends}
+Depends:
+ ${nvidia}-alternative (= ${binary:Version}),
+ ${shlibs:Depends}, ${misc:Depends}
+Breaks:
+ libgl1-${nvidia}-glx (<= 304.131-1),
+Replaces:
+ libgl1-${nvidia}-glx (<= 304.131-1),
+Provides:
+ libnvidia-cfg1-any,
+Description: NVIDIA binary OpenGL configuration library${nvidia:LegacyDesc}
+ These binary libraries provide optimized hardware acceleration of
+ OpenGL applications via a direct-rendering X Server.
+ .
+ This package contains the libnvidia-cfg.so.1 runtime library.
 
 #Package: ${nvidia}-alternative
 Package: nvidia-alternative
