--- a/debian/rules
+++ b/debian/rules
@@ -41,6 +41,8 @@ libdir			?= usr/lib/$(DEB_HOST_MULTIARCH)
 nvidia_private		 = nvidia/$(current)
 
 CONTROL_PREFIXES	 = nvidia-driver libgl1-nvidia nvidia-kernel nvidia-alternative xserver-xorg-video-nvidia
+CONTROL_PREFIXES	+= libnvidia-cfg1
+CONTROL_PREFIXES	+= libnvidia-glcore
 CONTROL_PREFIXES	+= nvidia-vdpau-driver
 CONTROL_PREFIXES	+= libcuda1
 CONTROL_PREFIXES	+= nvidia-opencl-icd libnvidia-compiler
