no armhf for 304
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304-stretch@6607 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -103,7 +103,7 @@ Recommends:
 Description: NVIDIA metapackage (OpenGL/GLX libraries)${nvidia:LegacyDesc}
  This metapackage depends on the NVIDIA binary libraries
  that provide optimized hardware acceleration of
- OpenGL applications via a direct-rendering X Server.
+ OpenGL/GLX applications via a direct-rendering X Server.
 
 #Package: ${nvidia}-driver-libs-i386
 Package: nvidia-driver-libs-i386
@@ -192,7 +192,7 @@ Description: NVIDIA binary OpenGL libraries${nvidia:LegacyDesc}
 
 #Package: lib${nvidia}-glcore
 Package: libnvidia-glcore
-Architecture: i386 amd64 armhf
+Architecture: i386 amd64
 Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
@@ -216,7 +216,7 @@ Description: NVIDIA binary OpenGL core libraries${nvidia:LegacyDesc}
 
 #Package: lib${nvidia}-cfg1
 Package: libnvidia-cfg1
-Architecture: i386 amd64 armhf
+Architecture: i386 amd64
 Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
