add more references to backported changes
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304@6614 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libcuda1.lintian-overrides.in
+++ b/debian/libcuda1.lintian-overrides.in
@@ -9,7 +9,7 @@ hardening-no-fortify-functions
 hardening-no-relro
 hardening-no-stackprotector
 
-# Use wildcard instead of exact substitution, this is a M-A: same package.
+# Use wildcard instead of exact path substitution, this is a M-A: same package.
 embedded-library usr/lib*/libcuda.so.#VERSION#: zlib
 
 # libcudart.so.2 does dlopen("libcuda.so").
