--- a/debian/libnvidia-glcore.install.in
+++ b/debian/libnvidia-glcore.install.in
@@ -1,3 +1,3 @@
 libnvidia-glcore.so.#VERSION#	#LIBDIR#/
 libnvidia-tls.so.#VERSION#	#LIBDIR#/
-tls/libnvidia-tls.so.#VERSION#	#LIBDIR#/tls/
+#!armhf#tls/libnvidia-tls.so.#VERSION#	#LIBDIR#/tls/
