--- a/debian/libnvidia-fatbinaryloader.lintian-overrides.in
+++ b/debian/libnvidia-fatbinaryloader.lintian-overrides.in
@@ -5,12 +5,14 @@ hardening-no-fortify-functions
 hardening-no-relro
 hardening-no-stackprotector
 
-# Use wildcard instead of exact substitution, this is a M-A: same package.
+# Use wildcard instead of exact path substitution, this is a M-A: same package.
 embedded-library usr/lib*/libnvidia-fatbinaryloader.so.#VERSION#: zlib
 
-# The libnvidia-fatbinaryloader.so.* SONAME changes with every upstream release.
-# But it is a (huge) plugin that is only used from other NVIDIA libraries
-# with the same upstream version (and a constant SONAME), so don't include
-# the SONAME in the package name to avoid going through NEW with every new
-# upstream release.
-package-name-doesnt-match-sonames
+# The libnvidia-fatbinaryloader.so.* SONAME changes with every upstream
+# release.
+# These private libraries are only used (and usable) as plugins
+# loaded by other NVIDIA libraries with the same upstream version
+# (and a stable SONAME).
+# Therefore we do not include the SONAME in this package name to
+# avoid going through NEW for every new upstream release.
+package-name-doesnt-match-sonames libnvidia-fatbinaryloader#VERSION#
