--- a/debian/rules
+++ b/debian/rules
@@ -47,8 +47,9 @@ nvidia_private		 = nvidia/$(current)
 CONTROL_PREFIXES	 = nvidia-driver nvidia-kernel nvidia-alternative xserver-xorg-video-nvidia
 CONTROL_PREFIXES	+= libnvidia
 CONTROL_PREFIXES	+= libgl1-nvidia
+CONTROL_PREFIXES	+= libglx-nvidia0
 CONTROL_PREFIXES	+= libegl-nvidia0
-CONTROL_PREFIXES	+= libglx-nvidia0 libgles-nvidia2 libgles-nvidia1
+CONTROL_PREFIXES	+= libgles-nvidia1 libgles-nvidia2
 CONTROL_PREFIXES	+= nvidia-vdpau-driver
 CONTROL_PREFIXES	+= libcuda1
 CONTROL_PREFIXES	+= libnvcuvid1
