update symbols control files
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/364@6664 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libgl1-nvidia-glx.symbols.in
+++ b/debian/libgl1-nvidia-glx.symbols.in
@@ -471,6 +471,7 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glDrawTransformFeedbackNV@Base 165
  glDrawTransformFeedbackStream@Base 256
  glDrawTransformFeedbackStreamInstanced@Base 285
+ glDrawVkImageNV@Base 364
  glEdgeFlag@Base 1.0.4349
  glEdgeFlagFormatNV@Base 185
  glEdgeFlagPointer@Base 1.0.4349
@@ -987,7 +988,7 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glGetVideoivNV@Base 173
  glGetVideoui64vNV@Base 173
  glGetVideouivNV@Base 173
- (arch=armhf)glGetVkProcAddrNV@Base 364.12
+ glGetVkProcAddrNV@Base 364
  glGetnColorTable@Base 346
  glGetnColorTableARB@Base 260
  glGetnCompressedTexImage@Base 346
@@ -1144,7 +1145,7 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glLoadTransposeMatrixfARB@Base 1.0.4349
  glLockArraysEXT@Base 1.0.4349
 #MISSING: 331# glLockStateNV@Base 260
- (arch=armhf)glLogTokenFlushNVX@Base 364.12
+ glLogTokenFlushNVX@Base 364
  glLogicOp@Base 1.0.4349
  glMakeBufferNonResidentNV@Base 185
  glMakeBufferResidentNV@Base 185
@@ -1835,6 +1836,8 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glShaderSource@Base 1.0.7664
  glShaderSourceARB@Base 1.0.6106
  glShaderStorageBlockBinding@Base 310
+ glSignalVkFenceNV@Base 364
+ glSignalVkSemaphoreNV@Base 364
  glStateCaptureNV@Base 346
 #MISSING: 331# glStatePropertiesDynamicNV@Base 260
 #MISSING: 331# glStatePropertyfNV@Base 260
@@ -2482,7 +2485,7 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glViewportSwizzleNV@Base 343
  glWaitSync@Base 190.18.05
  glWaitSyncValueuiNVX@Base 285
- (arch=armhf)glWaitVkSemaphoreNV@Base 364.12
+ glWaitVkSemaphoreNV@Base 364
  glWeightPathsNV@Base 275
  glWeightPointerOES@Base 349
  glWindowBackBufferHintAutodesk@Base 1.0.4349
@@ -2614,3 +2617,4 @@ libGL.so.1 libgl1-mesa-glx | libgl1
  glXWaitX@Base 1.0.4349
  glcuR0d4nX@Base 195.36
  gldbc3cfnX@Base 325
+ vk_icdGetInstanceProcAddr@Base 364
