--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -5,12 +5,12 @@ cc_version_check-gcc5.patch
 nvidia-use-ARCH.o_binary.patch
 nvidia-modeset-use-ARCH.o_binary.patch
 do-div-cast.patch
+radix-tree-empty.patch
+drm-mode-fb-cmd2.patch
+get-user-pages-drm.patch
+drm-gem-object-lookup.patch
 #avoid-ld.gold.patch
 include-swiotlb-header-on-arm.patch
 ignore_xen_on_arm.patch
 arm-outer-sync.patch
 nvidia-drm-arm-cflags.patch
-drm-mode-fb-cmd2.patch
-do-div-cast.patch
-get-user-pages-drm.patch
-drm-gem-object-lookup.patch
