prefer libgl1-glvnd-nvidia-glx over libgl1-nvidia-glx
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/364@6676 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -97,7 +97,7 @@ Architecture: i386 amd64 armhf
 Multi-Arch: same
 Depends:
  lib${nvidia}-glcore (= ${binary:Version}),
- libgl1-${nvidia}-glx (= ${binary:Version}) | libgl1-glvnd-${nvidia}-glx (= ${binary:Version}),
+ libgl1-glvnd-${nvidia}-glx (= ${binary:Version}) | libgl1-${nvidia}-glx (= ${binary:Version}),
  libegl-${nvidia}0 (= ${binary:Version}),
  ${misc:Depends}
 Recommends:
