--- a/debian/control
+++ b/debian/control
@@ -15,6 +15,8 @@ Build-Depends:
  dpkg-dev (>= 1.17),
  xz-utils,
  dkms,
+ libwayland-client0,
+ libwayland-server0,
  libxext6 [!ppc64el],
  quilt,
  po-debconf,
@@ -568,6 +570,25 @@ Description: NVIDIA binary EGL core libraries${nvidia:LegacyDesc}
  .
  This package contains the private core libraries used by the NVIDIA
  implementation of EGL and OpenGL|ES.
+
+#Package: lib${nvidia}-egl-wayland
+Package: libnvidia-egl-wayland
+Architecture: i386 amd64 armhf
+Multi-Arch: same
+Pre-Depends:
+ ${misc:Pre-Depends}
+Depends:
+ ${shlibs:Depends}, ${misc:Depends}
+Provides:
+ libnvidia-egl-wayland-${nvidia:Version},
+Conflicts:
+ libnvidia-egl-wayland-${nvidia:Version},
+Description: NVIDIA binary EGL wayland libraries${nvidia:LegacyDesc}
+ EGL provides a platform-agnostic mechanism for creating rendering surfaces
+ for use with other graphics libraries, such as OpenGL|ES.
+ .
+ This package contains the private wayland libraries used by the NVIDIA
+ implementation of EGL.
 
 #Package: lib${nvidia}-cfg1
 Package: libnvidia-cfg1
