--- a/debian/control
+++ b/debian/control
@@ -824,6 +824,8 @@ Provides:
  libcuda-7.0-1-i386 [i386],
  libcuda-7.5-1,
  libcuda-7.5-1-i386 [i386],
+ libcuda-8.0-1,
+ libcuda-8.0-1-i386 [i386],
 Homepage: http://www.nvidia.com/CUDA
 Description: NVIDIA CUDA Driver Library
  The Compute Unified Device Architecture (CUDA) enables NVIDIA
