--- a/debian/libnvidia-ptxjitcompiler.lintian-overrides.in
+++ b/debian/libnvidia-ptxjitcompiler.lintian-overrides.in
@@ -1,5 +1,5 @@
 # The NVIDIA license does not allow any form of modification.
-[i386]: binary-file-built-without-LFS-support
+[!amd64]: binary-file-built-without-LFS-support
 shlib-calls-exit
 [i386]: spelling-error-in-binary
 hardening-no-bindnow
