--- a/debian/control
+++ b/debian/control
@@ -574,7 +574,7 @@ Recommends:
  ${nvidia}-opencl-icd,
 Breaks:
  nvidia-opencl-icd (<< ${nvidia:Version}),
-Description: NVIDIA OpenCL driver
+Description: NVIDIA OpenCL driver - common files
  OpenCL (Open Computing Language) is a multivendor open standard for
  general-purpose parallel programming of heterogeneous systems that include
  CPUs, GPUs and other processors.
