--- a/debian/control
+++ b/debian/control
@@ -621,8 +621,8 @@ Provides:
 Description: NVIDIA Vulkan installable client driver (ICD)
  Vulkan is a multivendor open standard by the Khronos Group for 3D graphics.
  .
- This package provides the NVIDIA installable client driver (ICD) for Vulkan
- which supports NVIDIA GPUs.
+ This metapackage provides the NVIDIA installable client driver (ICD) for
+ Vulkan which supports NVIDIA GPUs.
 
 #Package: lib${nvidia}-cfg1
 Package: libnvidia-cfg1
