rename the virtual glvnd abi package
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/355@6716 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -192,7 +192,7 @@ Replaces:
  libglvnd-nvidia,
  libgldispatch0,
 Provides:
- libglvnd-abi-355,
+ glvnd-nvidia-abi-355,
 Description: Vendor neutral GL dispatch library -- libGLdispatch
  This is an implementation of the vendor-neutral dispatch layer for
  arbitrating OpenGL API calls between multiple vendors on a per-screen basis.
