--- a/debian/control
+++ b/debian/control
@@ -222,7 +222,7 @@ Description: Vendor neutral GL dispatch library -- libOpenGL
  arbitrating OpenGL API calls between multiple vendors on a per-screen basis.
  .
  This package contains the (binary) GLVND libOpenGL.so.0 stub library provided
- by NVIDIA which redirects to vendor implementations via GLVND.
+ by NVIDIA which dispatches to vendor implementations via GLVND.
 
 Package: libglx0-glvnd-nvidia
 Architecture: i386 amd64 armhf
@@ -240,8 +240,8 @@ Description: Vendor neutral GL dispatch library -- libGLX
  This is an implementation of the vendor-neutral dispatch layer for
  arbitrating OpenGL API calls between multiple vendors on a per-screen basis.
  .
- This package contains the (binary) libGLX.so.0 shared library provided by
- NVIDIA.
+ This package contains the (binary) GLVND libGLX.so.0 stub library provided by
+ NVIDIA which dispatches to vendor implementations (libGLX_*.so.0) via GLVND.
 
 #Package: libglx-${nvidia}0
 Package: libglx-nvidia0
@@ -254,7 +254,7 @@ Depends:
  libglx0 | libglx0-glvnd-nvidia,
  lib${nvidia}-glcore (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
-Description: NVIDIA binary GLX libraries${nvidia:LegacyDesc}
+Description: NVIDIA binary GLX library${nvidia:LegacyDesc}
  GLX ("OpenGL Extension to the X Window System") provides an interface between
  OpenGL and the X Window System as well as extensions to OpenGL itself.
  .
@@ -281,8 +281,8 @@ Description: NVIDIA binary OpenGL/GLX GLVND stub library
  These binary libraries provide optimized hardware acceleration of
  OpenGL applications via a direct-rendering X Server.
  .
- This package contains a libGL.so.1 stub that redirects to a vendor
- implementation via GLVND.
+ This package contains a libGL.so.1 stub that dispatches to vendor
+ implementations via GLVND.
 
 #Package: libgl1-${nvidia}-glx
 Package: libgl1-nvidia-glx
@@ -304,7 +304,7 @@ Suggests:
  ${nvidia:kmod:source},
 Provides:
  libgl1-nvidia-glx-any,
-Description: NVIDIA binary OpenGL libraries${nvidia:LegacyDesc}
+Description: NVIDIA binary OpenGL/GLX libraries${nvidia:LegacyDesc}
  These binary libraries provide optimized hardware acceleration of
  OpenGL applications via a direct-rendering X Server.
  .
@@ -329,7 +329,7 @@ Breaks:
  libgl1-${nvidia}-glx (<< 355.11-5),
 Replaces:
  libgl1-${nvidia}-glx (<< 355.11-5),
-Description: NVIDIA binary OpenGL core libraries${nvidia:LegacyDesc}
+Description: NVIDIA binary OpenGL/GLX core libraries${nvidia:LegacyDesc}
  These binary libraries provide optimized hardware acceleration of
  OpenGL applications via a direct-rendering X Server.
  .
@@ -353,7 +353,7 @@ Description: NVIDIA binary EGL GLVND stub library
  for use with other graphics libraries, such as OpenGL|ES.
  .
  This package contains the (binary) GLVND libEGL.so.1 stub library provided by
- NVIDIA which redirects to vendor implementations (libegl_*.so.0) via GLVND.
+ NVIDIA which dispatches to vendor implementations (libEGL_*.so.0) via GLVND.
 
 #Package: libegl1-${nvidia}
 Package: libegl1-nvidia
@@ -366,7 +366,7 @@ Pre-Depends:
 Depends:
  libegl-${nvidia}0 (= ${binary:Version}),
  ${misc:Depends}
-Description: NVIDIA binary EGL libraries (transitional)${nvidia:LegacyDesc}
+Description: NVIDIA binary EGL library (transitional)${nvidia:LegacyDesc}
  EGL provides a platform-agnostic mechanism for creating rendering surfaces
  for use with other graphics libraries, such as OpenGL|ES.
  .
@@ -384,7 +384,7 @@ Depends:
  libegl1-glvnd | libegl1-glvnd-nvidia,
  lib${nvidia}-eglcore (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
-Description: NVIDIA binary EGL libraries${nvidia:LegacyDesc}
+Description: NVIDIA binary EGL library${nvidia:LegacyDesc}
  This package contains the EGL native platform graphics interface library.
  EGL provides a platform-agnostic mechanism for creating rendering surfaces
  for use with other graphics libraries, such as OpenGL|ES.
@@ -408,7 +408,7 @@ Pre-Depends:
 Depends:
  ${nvidia}-alternative (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
-Description: NVIDIA binary OpenGL|ES 1.x stub libraries
+Description: NVIDIA binary OpenGL|ES 1.x GLVND stub library
  OpenGL|ES is a cross-platform API for full-function 2D and 3D graphics on
  embedded systems - including consoles, phones, appliances and vehicles.
  It contains a subset of OpenGL plus a number of extensions for the
@@ -420,8 +420,9 @@ Description: NVIDIA binary OpenGL|ES 1.x stub libraries
  or /usr/share/doc/libgl1-${nvidia}-glx/README.txt.gz
  for a complete list of supported GPUs and PCI IDs.
  .
- This package contains a libGLESv1_CM.so.1 stub that redirects to a vendor
- implementation via libglvnd.
+ This package contains the (binary) GLVND libGLESv1_CM.so.1 stub library
+ provided by NVIDIA which dispatches to vendor implementations
+ (libGLESv1_CM_*.so.1) via GLVND.
 
 #Package: libgles1-${nvidia}
 Package: libgles1-nvidia
@@ -434,7 +435,7 @@ Pre-Depends:
 Depends:
  libgles-${nvidia}1 (= ${binary:Version}),
  ${misc:Depends}
-Description: NVIDIA binary OpenGL|ES 1.x libraries (transitional)${nvidia:LegacyDesc}
+Description: NVIDIA binary OpenGL|ES 1.x library (transitional)${nvidia:LegacyDesc}
  OpenGL|ES is a cross-platform API for full-function 2D and 3D graphics on
  embedded systems - including consoles, phones, appliances and vehicles.
  It contains a subset of OpenGL plus a number of extensions for the
@@ -456,7 +457,7 @@ Depends:
  libgles1-glvnd | libgles1-glvnd-nvidia,
  lib${nvidia}-eglcore (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
-Description: NVIDIA binary OpenGL|ES 1.x libraries${nvidia:LegacyDesc}
+Description: NVIDIA binary OpenGL|ES 1.x library${nvidia:LegacyDesc}
  OpenGL|ES is a cross-platform API for full-function 2D and 3D graphics on
  embedded systems - including consoles, phones, appliances and vehicles.
  It contains a subset of OpenGL plus a number of extensions for the
@@ -483,7 +484,7 @@ Pre-Depends:
 Depends:
  ${nvidia}-alternative (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
-Description: NVIDIA binary OpenGL|ES 2.x stub libraries
+Description: NVIDIA binary OpenGL|ES 2.x GLVND stub library
  OpenGL|ES is a cross-platform API for full-function 2D and 3D graphics on
  embedded systems - including consoles, phones, appliances and vehicles.
  It contains a subset of OpenGL plus a number of extensions for the
@@ -496,8 +497,9 @@ Description: NVIDIA binary OpenGL|ES 2.x stub libraries
  or /usr/share/doc/libgl1-${nvidia}-glx/README.txt.gz
  for a complete list of supported GPUs and PCI IDs.
  .
- This package contains a libGLESv2.so.2 stub that redirects to a vendor
- implementation via libglvnd.
+ This package contains the (binary) GLVND libGLESv2.so.2 stub library
+ provided by NVIDIA which dispatches to vendor implementations
+ (libGLESv2_*.so.2) via GLVND.
 
 #Package: libgles2-${nvidia}
 Package: libgles2-nvidia
@@ -510,7 +512,7 @@ Pre-Depends:
 Depends:
  libgles-${nvidia}2 (= ${binary:Version}),
  ${misc:Depends}
-Description: NVIDIA binary OpenGL|ES 2.x libraries (transitional)${nvidia:LegacyDesc}
+Description: NVIDIA binary OpenGL|ES 2.x library (transitional)${nvidia:LegacyDesc}
  OpenGL|ES is a cross-platform API for full-function 2D and 3D graphics on
  embedded systems - including consoles, phones, appliances and vehicles.
  It contains a subset of OpenGL plus a number of extensions for the
@@ -533,7 +535,7 @@ Depends:
  libgles2-glvnd | libgles2-glvnd-nvidia,
  lib${nvidia}-eglcore (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
-Description: NVIDIA binary OpenGL|ES 2.x libraries${nvidia:LegacyDesc}
+Description: NVIDIA binary OpenGL|ES 2.x library${nvidia:LegacyDesc}
  OpenGL|ES is a cross-platform API for full-function 2D and 3D graphics on
  embedded systems - including consoles, phones, appliances and vehicles.
  It contains a subset of OpenGL plus a number of extensions for the
