Have libglx0-glvnd-nvidia conflicts+replaces libglx0-nvidia to facilitate upgrade for SVN/downstream users
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/361@6763 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -229,8 +229,10 @@ Architecture: i386 amd64 armhf
 Multi-Arch: same
 Conflicts:
  libglx0,
+ libglx0-nvidia,
 Replaces:
  libglx0,
+ libglx0-nvidia,
 Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
