Add nvidia-drm-fence-kapi-attribute.patch to fix nvidia-drm build failure on i386 and 4.6+
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/370@6814 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -10,4 +10,5 @@ include-swiotlb-header-on-arm.patch
 ignore_xen_on_arm.patch
 arm-outer-sync.patch
 nvidia-drm-arm-cflags.patch
+nvidia-drm-fence-kapi-attribute.patch
 #HAS_UVM#radix-tree-empty.patch
