--- a/debian/libnvidia-fatbinaryloader.symbols.in
+++ b/debian/libnvidia-fatbinaryloader.symbols.in
@@ -1,20 +1,20 @@
 libnvidia-fatbinaryloader.so.#VERSION# #PACKAGE# #MINVER#
- _cmdoptGetOptionValue@Base 361
- adler32@Base 361
- cmdoptAddOption@Base 361
- cmdoptCreate@Base 361
- cmdoptOnCommandLine@Base 361
- cmdoptParse@Base 361
- cmdoptPrint@Base 361
- ctCommonExit@Base 361
- ctCommonInit@Base 361
- ctGetEnv@Base 361
- ctHandleInputFromStdin@Base 361
- ctLogFinish@Base 361
- ctLogInitialize@Base 361
- ctMsgCreateSourcePos@Base 361
- ctParseArchVersion@Base 361
- ctToolkitVersion@Base 361
+#MISSING: 367.44# _cmdoptGetOptionValue@Base 361
+#MISSING: 367.44# adler32@Base 361
+#MISSING: 367.44# cmdoptAddOption@Base 361
+#MISSING: 367.44# cmdoptCreate@Base 361
+#MISSING: 367.44# cmdoptOnCommandLine@Base 361
+#MISSING: 367.44# cmdoptParse@Base 361
+#MISSING: 367.44# cmdoptPrint@Base 361
+#MISSING: 367.44# ctCommonExit@Base 361
+#MISSING: 367.44# ctCommonInit@Base 361
+#MISSING: 367.44# ctGetEnv@Base 361
+#MISSING: 367.44# ctHandleInputFromStdin@Base 361
+#MISSING: 367.44# ctLogFinish@Base 361
+#MISSING: 367.44# ctLogInitialize@Base 361
+#MISSING: 367.44# ctMsgCreateSourcePos@Base 361
+#MISSING: 367.44# ctParseArchVersion@Base 361
+#MISSING: 367.44# ctToolkitVersion@Base 361
  elf32_file_header@Base 361
  elf32_first_section_in_segment@Base 361
  elf32_get_entry_symbol_index@Base 361
@@ -52,6 +52,7 @@ libnvidia-fatbinaryloader.so.#VERSION# #PACKAGE# #MINVER#
  elfLink_Errmsg@Base 361
  elfLink_Finish@Base 361
  elfLink_Finish_Reading_Library@Base 361
+ elfLink_Free_Fatbinary@Base 367.44
  elfLink_Free_Host_Object@Base 361
  elfLink_Get_Cubin_From_FatBinary@Base 361
  elfLink_Get_FatBinary_From_Object@Base 361
@@ -59,158 +60,160 @@ libnvidia-fatbinaryloader.so.#VERSION# #PACKAGE# #MINVER#
  elfLink_Next_Library_Member@Base 361
  elfLink_Start@Base 361
  elfLink_Start_Reading_Library@Base 361
+ elf_end@Base 367.44
  elf_errmsg@Base 361
  elf_is_64bit@Base 361
  elf_size@Base 361
- enablePerfMeasuring@Base 361
+#MISSING: 367.44# enablePerfMeasuring@Base 361
  fatBinaryCtl@Base 361
  fatBinaryCtl_Compile@Base 361
  fatBinaryCtl_Create@Base 361
  fatBinaryCtl_Delete@Base 361
  fatBinaryCtl_Errmsg@Base 361
  fatBinaryCtl_PickCandidate@Base 361
- fnamDecomposePath@Base 361
- getDebugLevel@Base 361
- getFileLineInfo@Base 361
- getOutStream@Base 361
- gpuDefaultProfile@Base 361
- gpuGetFeaturesProfile@Base 361
+#MISSING: 367.44# fnamDecomposePath@Base 361
+#MISSING: 367.44# getDebugLevel@Base 361
+#MISSING: 367.44# getFileLineInfo@Base 361
+#MISSING: 367.44# getOutStream@Base 361
+#MISSING: 367.44# gpuDefaultProfile@Base 361
+#MISSING: 367.44# gpuGetFeaturesProfile@Base 361
  gpuInfoRunsOn@Base 361
- gpuSupportedArchitectures@Base 361
+#MISSING: 367.44# gpuSupportedArchitectures@Base 361
  gpucompRestoreLogLine@Base 361.42
  gpucompSetLogLine@Base 361.42
  gpucompSetTerminators@Base 361.42
- gpuinfMsgIgnoredOption@Base 361
- gpuinfMsgInvalidOptionValue@Base 361
- gpuinfMsgNoRealProfile@Base 361
- gpuinfMsgUnknownOption@Base 361
- gpuinfMsgUnsupportedOption@Base 361
- isDebugGroupPresent@Base 361
- isLoggerInitialized@Base 361
- listAddTo@Base 361
- listConcat@Base 361
- listCons@Base 361
- listContains@Base 361
- listDelete@Base 361
- listDeleteFrom@Base 361
- listIndex@Base 361
- listReverse@Base 361
- listSize@Base 361
- listSort@Base 361
- listToSet@Base 361
- listTraverse@Base 361
- mapAnyRange@Base 361
- mapApply@Base 361
- mapCreate@Base 361
- mapDefine@Base 361
- mapDelete@Base 361
- mapDomainTraverse@Base 361
- mapEmpty@Base 361
- mapIsDefined@Base 361
- mapRangeToList@Base 361
- mapRangeTraverse@Base 361
- mapSize@Base 361
- mapToList@Base 361
- mapTraverse@Base 361
- mapUndefine@Base 361
- memspCreate@Base 361
- memspDelete@Base 361
- memspFree@Base 361
- memspMalloc@Base 361
- memspPrint@Base 361
+#MISSING: 367.44# gpuinfMsgIgnoredOption@Base 361
+#MISSING: 367.44# gpuinfMsgInvalidOptionValue@Base 361
+#MISSING: 367.44# gpuinfMsgNoRealProfile@Base 361
+#MISSING: 367.44# gpuinfMsgUnknownOption@Base 361
+#MISSING: 367.44# gpuinfMsgUnsupportedOption@Base 361
+#MISSING: 367.44# isDebugGroupPresent@Base 361
+#MISSING: 367.44# isLoggerInitialized@Base 361
+#MISSING: 367.44# listAddTo@Base 361
+#MISSING: 367.44# listConcat@Base 361
+#MISSING: 367.44# listCons@Base 361
+#MISSING: 367.44# listContains@Base 361
+#MISSING: 367.44# listDelete@Base 361
+#MISSING: 367.44# listDeleteFrom@Base 361
+#MISSING: 367.44# listIndex@Base 361
+#MISSING: 367.44# listReverse@Base 361
+#MISSING: 367.44# listSize@Base 361
+#MISSING: 367.44# listSort@Base 361
+#MISSING: 367.44# listToSet@Base 361
+#MISSING: 367.44# listTraverse@Base 361
+#MISSING: 367.44# mapAnyRange@Base 361
+#MISSING: 367.44# mapApply@Base 361
+#MISSING: 367.44# mapCreate@Base 361
+#MISSING: 367.44# mapDefine@Base 361
+#MISSING: 367.44# mapDelete@Base 361
+#MISSING: 367.44# mapDomainTraverse@Base 361
+#MISSING: 367.44# mapEmpty@Base 361
+#MISSING: 367.44# mapIsDefined@Base 361
+#MISSING: 367.44# mapRangeToList@Base 361
+#MISSING: 367.44# mapRangeTraverse@Base 361
+#MISSING: 367.44# mapSize@Base 361
+#MISSING: 367.44# mapToList@Base 361
+#MISSING: 367.44# mapTraverse@Base 361
+#MISSING: 367.44# mapUndefine@Base 361
+#MISSING: 367.44# memspCreate@Base 361
+#MISSING: 367.44# memspDelete@Base 361
+#MISSING: 367.44# memspFree@Base 361
+#MISSING: 367.44# memspMalloc@Base 361
+#MISSING: 367.44# memspPrint@Base 361
 #MISSING: 361.42# msgAddErrorClassPrefixes@Base 361
- msgCppUpdateSourceStruct@Base 361
- msgCreateSourceStructure@Base 361
- msgDeleteSourceStructure@Base 361
+#MISSING: 367.44# msgCppUpdateSourceStruct@Base 361
+#MISSING: 367.44# msgCreateSourceStructure@Base 361
+#MISSING: 367.44# msgDeleteSourceStructure@Base 361
 #MISSING: 361.42# msgDontPrefixErrorLines@Base 361
- msgGetIgnoreWarnings@Base 361.42
- msgGetToolName@Base 361.42
- msgGetWarnAsError@Base 361.42
+#MISSING: 367.44# msgGetIgnoreWarnings@Base 361.42
+#MISSING: 367.44# msgGetToolName@Base 361.42
+#MISSING: 367.44# msgGetWarnAsError@Base 361.42
 #MISSING: 361.42# msgIgnoreWarnings@Base 361
- msgPopInclude@Base 361
- msgPushInclude@Base 361
- msgReport@Base 361
- msgReportWithPos@Base 361
- msgSetIgnoreWarnings@Base 361.42
- msgSetToolName@Base 361.42
- msgSetWarnAsError@Base 361.42
+#MISSING: 367.44# msgPopInclude@Base 361
+#MISSING: 367.44# msgPushInclude@Base 361
+#MISSING: 367.44# msgReport@Base 361
+#MISSING: 367.44# msgReportWithPos@Base 361
+#MISSING: 367.44# msgSetIgnoreWarnings@Base 361.42
+#MISSING: 367.44# msgSetToolName@Base 361.42
+#MISSING: 367.44# msgSetWarnAsError@Base 361.42
 #MISSING: 361.42# msgToolName@Base 361
 #MISSING: 361.42# msgWarnAsError@Base 361
 #MISSING: 361.42# nvTrace@Base 361
 #MISSING: 361.42# nvTraceLevel@Base 361
- procGetTempName@Base 361
- procSetTrapOnError@Base 361
- rangemapApply@Base 361
- rangemapCreate@Base 361
- rangemapDefine@Base 361
- rangemapDelete@Base 361
- rangemapTraverse@Base 361
- rangemapUndefine@Base 361
- setAddTo@Base 361
- setAnyElement@Base 361
- setContains@Base 361
- setCreate@Base 361
- setDelete@Base 361
- setDeleteFrom@Base 361
- setElement@Base 361
- setEmpty@Base 361
- setInPlaceUnion@Base 361
- setInsert@Base 361
- setIntersection@Base 361
- setOverlaps@Base 361
- setRemove@Base 361
- setSize@Base 361
- setToList@Base 361
- setTraverse@Base 361
- stdABORT@Base 361
- stdASSERTLOGFAIL@Base 361
- stdASSERTLOGSETPOS@Base 361
- stdCreateObfuscation@Base 361
- stdDeleteObfuscation@Base 361
- stdDeobfuscate@Base 361
- stdEXIT@Base 361
- stdFreeFun@Base 361
- stdGetMemUsage@Base 361
- stdGetPeakMemUsage@Base 361
+#MISSING: 367.44# procGetTempName@Base 361
+#MISSING: 367.44# procSetTrapOnError@Base 361
+#MISSING: 367.44# rangemapApply@Base 361
+#MISSING: 367.44# rangemapCreate@Base 361
+#MISSING: 367.44# rangemapDefine@Base 361
+#MISSING: 367.44# rangemapDelete@Base 361
+#MISSING: 367.44# rangemapTraverse@Base 361
+#MISSING: 367.44# rangemapUndefine@Base 361
+#MISSING: 367.44# setAddTo@Base 361
+#MISSING: 367.44# setAnyElement@Base 361
+#MISSING: 367.44# setContains@Base 361
+#MISSING: 367.44# setCreate@Base 361
+#MISSING: 367.44# setDelete@Base 361
+#MISSING: 367.44# setDeleteFrom@Base 361
+#MISSING: 367.44# setElement@Base 361
+#MISSING: 367.44# setEmpty@Base 361
+#MISSING: 367.44# setInPlaceUnion@Base 361
+#MISSING: 367.44# setInsert@Base 361
+#MISSING: 367.44# setIntersection@Base 361
+#MISSING: 367.44# setOverlaps@Base 361
+#MISSING: 367.44# setRemove@Base 361
+#MISSING: 367.44# setSize@Base 361
+#MISSING: 367.44# setToList@Base 361
+#MISSING: 367.44# setTraverse@Base 361
+#MISSING: 367.44# stdABORT@Base 361
+#MISSING: 367.44# stdASSERTLOGFAIL@Base 361
+#MISSING: 367.44# stdASSERTLOGSETPOS@Base 361
+#MISSING: 367.44# stdCreateObfuscation@Base 361
+#MISSING: 367.44# stdDeleteObfuscation@Base 361
+#MISSING: 367.44# stdDeobfuscate@Base 361
+#MISSING: 367.44# stdEXIT@Base 361
+#MISSING: 367.44# stdFreeFun@Base 361
+#MISSING: 367.44# stdGetMemUsage@Base 361
+#MISSING: 367.44# stdGetPeakMemUsage@Base 361
  stdGetThreadContext@Base 361
- stdGetTimer@Base 361
- stdIntEqual@Base 361
- stdIntHash@Base 361
- stdLOG2@Base 361
- stdOutOfMemory@Base 361
- stdPointerEqual@Base 361
- stdPointerHash@Base 361
- stdResetTimer@Base 361
- stdSYSLOG@Base 361
- stdSetLogLine@Base 361
- stdStringEqual@Base 361
- stdStringHash@Base 361
- stdStringIsPrefix@Base 361
- stdSwapMemSpace@Base 361
- stdTimerInit@Base 361
- stdTokenizeString@Base 361
- stdVSYSLOG@Base 361.42
- stdpInt64Equal@Base 361
- stdpInt64Hash@Base 361
- stringAddBuf@Base 361
- stringAddChar@Base 361
- stringAddFormat@Base 361
- stringCopy@Base 361
- stringCreate@Base 361
- stringDelete@Base 361
- stringEmpty@Base 361
- stringSize@Base 361
- stringStripToBuf@Base 361
- stringToBuf@Base 361
+#MISSING: 367.44# stdGetTimer@Base 361
+#MISSING: 367.44# stdIntEqual@Base 361
+#MISSING: 367.44# stdIntHash@Base 361
+#MISSING: 367.44# stdLOG2@Base 361
+#MISSING: 367.44# stdOutOfMemory@Base 361
+#MISSING: 367.44# stdPointerEqual@Base 361
+#MISSING: 367.44# stdPointerHash@Base 361
+#MISSING: 367.44# stdResetTimer@Base 361
+#MISSING: 367.44# stdSYSLOG@Base 361
+#MISSING: 367.44# stdSetLogLine@Base 361
+#MISSING: 367.44# stdStringEqual@Base 361
+#MISSING: 367.44# stdStringHash@Base 361
+#MISSING: 367.44# stdStringIsPrefix@Base 361
+#MISSING: 367.44# stdSwapMemSpace@Base 361
+ stdThreadDetach@Base 367.44
+#MISSING: 367.44# stdTimerInit@Base 361
+#MISSING: 367.44# stdTokenizeString@Base 361
+#MISSING: 367.44# stdVSYSLOG@Base 361.42
+#MISSING: 367.44# stdpInt64Equal@Base 361
+#MISSING: 367.44# stdpInt64Hash@Base 361
+#MISSING: 367.44# stringAddBuf@Base 361
+#MISSING: 367.44# stringAddChar@Base 361
+#MISSING: 367.44# stringAddFormat@Base 361
+#MISSING: 367.44# stringCopy@Base 361
+#MISSING: 367.44# stringCreate@Base 361
+#MISSING: 367.44# stringDelete@Base 361
+#MISSING: 367.44# stringEmpty@Base 361
+#MISSING: 367.44# stringSize@Base 361
+#MISSING: 367.44# stringStripToBuf@Base 361
+#MISSING: 367.44# stringToBuf@Base 361
 #MISSING: 361.42# tprintf@Base 361
- vectorAddTo@Base 361
- vectorCreate@Base 361
- vectorDelete@Base 361
- vectorIndex@Base 361
- vectorSetElement@Base 361
- vectorSize@Base 361
- vectorTop@Base 361
- wtrCreateFileWriter@Base 361
- wtrCreateStringWriter@Base 361
- wtrDelete@Base 361
- wtrWrite@Base 361
+#MISSING: 367.44# vectorAddTo@Base 361
+#MISSING: 367.44# vectorCreate@Base 361
+#MISSING: 367.44# vectorDelete@Base 361
+#MISSING: 367.44# vectorIndex@Base 361
+#MISSING: 367.44# vectorSetElement@Base 361
+#MISSING: 367.44# vectorSize@Base 361
+#MISSING: 367.44# vectorTop@Base 361
+#MISSING: 367.44# wtrCreateFileWriter@Base 361
+#MISSING: 367.44# wtrCreateStringWriter@Base 361
+#MISSING: 367.44# wtrDelete@Base 361
+#MISSING: 367.44# wtrWrite@Base 361
